Copy icon to output directory

--- a/EqualityCheck/EqualityCheck.csproj
+++ b/EqualityCheck/EqualityCheck.csproj
@@ -8,4 +8,10 @@
     <PackageIcon>equality-check.png</PackageIcon>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="equality-check.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
